<resources>
    <string name="app_name">Water Tab Driver</string>
    <string name="water_tap">Water Tap</string>
    <string name="fill_info">Fill The Below information to Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your password?</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="fill_info_register">Fill The Below information to Register</string>
    <string name="username">Username</string>
    <string name="have_account">Have an account?</string>
    <string name="back">back</string>
    <string name="password_empty">Password must be entered!</string>
    <string name="email_empty">Email must be entered!</string>
    <string name="phone">Phone</string>
    <string name="username_empty">Username must be entered</string>
    <string name="phone_empty">Phone must be entered</string>
    <string name="email_is_used">This email already used!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="Ride">Ride</string>
    <string name="notification">Notifications</string>
    <string name="about_us">About us</string>
    <string name="concat_us">Concat us</string>
    <string name="rating">Rating</string>
    <string name="lock">lock</string>
    <string name="my_status">My Status</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="homepage">Homepage</string>
    <string name="settings">Settings</string>
    <string name="drawerOpen">drawer open</string>
    <string name="drawerClose">drawer close</string>
    <string name="enter_subject">Enter The Subject</string>
    <string name="enter_content">Enter The Content</string>
    <string name="send_email">Send Email</string>
    <string name="content_error">Content must entered!</string>
    <string name="subject_error">Subject must entered!</string>
    <string name="old_orders">Old Orders</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="new_order">%s He asks you for water, Accept it?</string>
    <string name="rejection_order">Rejection</string>
    <string name="accept_order">Accept</string>
    <string name="error">Something is wrong try again later.</string>
    <string name="finish_order">Finish Order</string>
    <string name="Welcome">Welcome,</string>
    <string name="about_us_text">Water Tap was inspired by the need for an online platform to provide services in a faster and more efficient way in comparison with usual ways to provide these services.&lt;br /&gt;Water Tap platform makes it easier for water-trucks drivers and their clients to communicate using modern technologies.</string>

</resources>