<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/ride"
            android:icon="@drawable/ic_compass"
            android:title="@string/Ride" />

        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/my_profile" />


        <item
            android:id="@+id/old_orders"
            android:icon="@drawable/ic_clock"
            android:title="@string/old_orders" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_information"
            android:title="@string/about_us" />

        <item
            android:id="@+id/concat_us"
            android:icon="@drawable/ic_letter"
            android:title="@string/concat_us" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>