<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_12sdp"
    tools:context=".view.fragments.ConcatUsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/concat_us_input_layout_email_subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concat_us_et_subject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:fontFamily="@font/variable_font"
            android:hint="@string/enter_subject" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/concat_us_input_layout_email_body"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/concat_us_btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concat_us_input_layout_email_subject">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concat_us_et_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:fontFamily="@font/variable_font"
            android:hint="@string/enter_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/concat_us_btn_send"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:text="@string/send_email"
        android:fontFamily="@font/variable_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>